# minimal-MCP

./: .gitignore  README.md  SECURITY.md  config.json  pyproject.toml  sandbox.py  server.py
tests/: test_sandbox.py
tools/: __init__.py  file_ops.py  ssh_ops.py
